// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid.tsx should match FlexBox snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #efefef;
  margin-bottom: 4px;
  margin-top: 4px;
}

<body>
  <div>
    <div
      class="c0"
    />
  </div>
</body>
`;

exports[`Grid.tsx should match FlexCol snapshot 1`] = `
<body>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f44336;
  margin-right: 4px;
  margin-left: 4px;
}

.c1 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
    <div
      class="c0 c1"
    />
  </div>
</body>
`;
